🚧 feat: Consumo API
configuração de conexão de api

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -4,5 +4,5 @@ html, body{
     height: 100%;
 }
 body{
-    cursor: url('/public/iron-cursor.cur'), auto !important;
+    cursor: url('/iron-cursor.cur'), auto !important;
 }
